# occt-tests

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
geom/: CMakeLists.txt
geom/inc/: CCIWrapper.h
geom/src/: CCIWrapper.cpp
geom/test/: CCITest.cpp
occt/win/Debug/lib/: TKBO.lib  TKBRep.lib  TKBin.lib  TKBinL.lib  TKBinTObj.lib  TKBinXCAF.lib  TKBool.lib  TKCAF.lib  TKCDF.lib  TKDCAF.lib  TKDE.lib  TKDECascade.lib  TKDEGLTF.lib  TKDEIGES.lib  TKDEOBJ.lib  TKDEPLY.lib  TKDESTL.lib  TKDEVRML.lib  TKDraw.lib  TKExpress.lib  TKFeat.lib  TKFillet.lib  TKG2d.lib  TKG3d.lib  TKGeomAlgo.lib  TKGeomBase.lib  TKHLR.lib  TKLCAF.lib  TKMath.lib  TKMesh.lib  TKMeshVS.lib  TKOffset.lib  TKOpenGl.lib  TKOpenGlTest.lib  TKPrim.lib  TKQADraw.lib  TKRWMesh.lib  TKService.lib  TKShHealing.lib  TKStd.lib  (+26 more)
